set the z-index of the articles box so that links aren't being covered by the search result div (fixes #3114)
git-svn-id: file:///Users/gauthierm/svnrepo/public/store/trunk@35454 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/store-search-results-page.css
+++ b/www/styles/store-search-results-page.css
@@ -11,7 +11,6 @@ ul.site-search-results li.store-category-tile a span.store-category-tile-title {
 	margin-top: 0;
 }
 
-
 #product_results_frame,
 #category_results_frame {
 	border: none;
@@ -48,6 +47,8 @@ ul.site-search-results li.store-category-tile a span.store-category-tile-title {
 	float: right;
 	width: 220px;
 	margin-left: 20px;
+	position: relative;
+	z-index: 99;
 }
 
 #article_results_frame.store-article-results-full-width {
